# snap

./: .gitignore  README.md
client/: package-lock.json  package.json
client/app/: page.tsx
client/app/dashboard/: layout.tsx  page.tsx
client/components/: homecard.tsx
client/components/dashboard/: Profile.tsx  Promptbar.tsx  Textarea.tsx
client/lib/: api.ts
client/types/: index.ts
server/: pyproject.toml
server/app/: main.py
server/app/api/v1/: documents.py  ingest.py  search.py
server/app/core/: rate_limiter.py
server/app/schemas/: ingest.py
server/app/services/: vector_store.py
